Fixed alignment, border and background color for schedule table on about-us.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,10 +72,10 @@ h5 {
     position: relative;
 }
 
-.opac-back {
+/* .opac-back {
     background: black !important;
     opacity: 0.6;
-}
+} */
 
 /* Jumbotron from Whiskey project */
 .jumbotron {
